--- a/drink-water/index.html
+++ b/drink-water/index.html
@@ -13,7 +13,7 @@
 
   <div class="cup">
     <div id="remained" class="remained">
-      <span id="liters">1</span>
+      <span id="liters"></span>
       <small>Remained</small>
     </div>
 
