--- a/theme-clock/index.html
+++ b/theme-clock/index.html
@@ -19,8 +19,8 @@
       <div class="center-point"></div>
     </div>
 
-    <div class="time">12:00</div>
-    <div class="date">Sunday, Dec <span class="circle">27</span></div>
+    <div class="time"></div>
+    <div class="date"></div>
 
   </div>
 
